Initial schedule controller
